fix schedule section mobile

--- a/apps/web/src/components/ScheduleSection/ScheduleSection.module.scss
+++ b/apps/web/src/components/ScheduleSection/ScheduleSection.module.scss
@@ -265,6 +265,11 @@
   .scheduleCardTitle {
     font-size: 16px;
   }
+
+  .scheduleCardSubtitle {
+    margin-right: 0;
+    margin-left: 54px;
+  }
 }
 
 @media screen and (max-width: 382px) {
